updated rebuild tests to account for new fields and make them easier to manage